@@ -42,3 +42,4 @@ shift+prior=navigator_review_bottom
 insert+extendedDown=caretSayAll
 add=reviewSayAll
 insert+f=formatInfo
+insert+m=toggleReportObjectUnderMouse
