@@ -25,6 +25,7 @@ Changes since revision 164:
 *Made NVDA over all much more responsive (especially in edit fields such as an address bar)
 *Fixed bug where tooltips and help balloons were not speaking
 *Fixed up some bugs in mouse tracking (NVDA should now report objects as the mouse moves over them).
+*Reporting the object under the mouse can be turned off or on by insert+m.
 *Added key echo scripts:
 -insert+2 toggle speak typed characters
 -insert+3 toggle speak typed words
